5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1590_2049.log
== TEST (2019-03-25 14:37:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

X = 346
Y = 2

Var = int(input("Qual e o dividendo?")
Var1 = int(input("Qual e o divisor?")
Var2 = int(input("Qual e o quociente")
Var3 = int(input("Qual e o resto?") 

dividendo = X
divisor = Y 
quociente = X//Y
resto = 346%2

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- ERROR:
File "XXXX", line 10
    Var1 = int(input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

X = 346
Y = 2

Var = int(input("Qual e o dividendo?")
Var1 = int(input("Qual e o divisor?")
Var2 = int(input("Qual e o quociente")
Var3 = int(input("Qual e o resto?") 

dividendo = X
divisor = Y 
quociente = X//Y
resto = 346%2

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- EXECUTION TIME:
0.174684
-- ERROR:
  File "/home/codebench/codes/1590/2049/main.py", line 10
    Var1 = int(input()
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:39:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

X = 346
Y = 2

dividendo = int(input("Qual e o dividendo?")
divisor = int(input("Qual e o divisor?")
quociente = int(input("Qual e o quociente")
resto = int(input("Qual e o resto?") 

dividendo = X
divisor = Y 
quociente = X//Y
resto = 346%2

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- ERROR:
File "XXXX", line 10
    divisor = int(input()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:39:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

X = 346
Y = 2

dividendo = int(input("Qual e o dividendo?")
divisor = int(input("Qual e o divisor?")
quociente = int(input("Qual e o quociente")
resto = int(input("Qual e o resto?") 

dividendo = X
divisor = Y 
quociente = X//Y
resto = 346%2

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- EXECUTION TIME:
0.225241
-- ERROR:
  File "/home/codebench/codes/1590/2049/main.py", line 10
    divisor = int(input()
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:40:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

dividendo = int(input("Qual e o dividendo?")
divisor = int(input("Qual e o divisor?")
 
dividendo = X
divisor = Y 
quociente = X//Y
resto = X%Y

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- ERROR:
File "XXXX", line 7
    divisor = int(input()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

dividendo = int(input("Qual e o dividendo?")
divisor = int(input("Qual e o divisor?")
 
dividendo = X
divisor = Y 
quociente = X//Y
resto = X%Y

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- EXECUTION TIME:
0.182966
-- ERROR:
  File "/home/codebench/codes/1590/2049/main.py", line 7
    divisor = int(input()
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:41:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

dividendo = int(input("Qual e o dividendo?")
divisor = int(input("Qual e o divisor?")
 
quociente = dividendo//divisor
resto = dividendo%divisor

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- ERROR:
File "XXXX", line 7
    divisor = int(input()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:41:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

dividendo = int(input("Qual e o dividendo?")
divisor = int(input("Qual e o divisor?")
 
quociente = dividendo//divisor
resto = dividendo%divisor

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- EXECUTION TIME:
0.188257
-- ERROR:
  File "/home/codebench/codes/1590/2049/main.py", line 7
    divisor = int(input()
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:42:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

dividendo = int(input("Qual e o dividendo?")
divisor = int(input("Qual e o divisor?")
 
quociente = (dividendo//divisor)
resto = dividendo%divisor

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- ERROR:
File "XXXX", line 7
    divisor = int(input()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:42:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

dividendo = int(input("x")
divisor = int(input("y")
 
quociente = (dividendo//divisor)
resto = dividendo%divisor

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- ERROR:
File "XXXX", line 7
    divisor = int(input()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:42:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

dividendo = int(input("x")
divisor = int(input("y")
 
quociente = (dividendo//divisor)
resto = dividendo%divisor

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- EXECUTION TIME:
0.148091
-- ERROR:
  File "/home/codebench/codes/1590/2049/main.py", line 7
    divisor = int(input()
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:42:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

dividendo = int(input("x"))
divisor = int(input("y"))
 
quociente = (dividendo//divisor)
resto = dividendo%divisor

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:42:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#dividendo = x346 e divisor = y2 / quociente = 173 e resto = 0

dividendo = int(input("x"))
divisor = int(input("y"))
 
quociente = (dividendo//divisor)
resto = dividendo%divisor

print(dividendo)
print(divisor)
print(quociente)
print(resto)

-- EXECUTION TIME:
0.150329
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
